--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start" : "lite-server"
+    "start": "lite-server && node webapi.js",
+    "webapi": "node webapi/webapi.js"
   },
   "author": "The iFish Group Inc",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.2.2"
+    "express": "^4.14.1",
+    "lite-server": "^2.2.2",
+    "sendmail": "^1.1.1"
   }
 }
