--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "scripts": {
     "start": "lite-server && node webapi.js",
-    "webapi": "node webapi/webapi.js"
+    "webapi": "node webapi/webapi.js",
+    "test": "node test.js"
   },
   "author": "The iFish Group Inc",
   "license": "ISC",
   "devDependencies": {
+    "assert": "^1.4.1",
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "lite-server": "^2.2.2",
+    "mongodb": "^2.2.24",
     "sendmail": "^1.1.1"
   }
 }
