--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "lite-server": "^2.2.2"
   },
   "dependencies": {
-    "cors": "^2.8.1",
-    "connect-cors": "^0.5.6",
     "assert": "^1.4.1",
     "body-parser": "^1.16.1",
+    "connect-cors": "^0.5.6",
+    "cors": "^2.8.1",
     "express": "^4.14.1",
     "lite-server": "^2.2.2",
     "mongodb": "^2.2.24",
-    "sendmail": "^1.1.1"    
+    "sendmail": "^1.1.1",
+    "twilio": "^3.0.0-rc.13"
   }
 }
