--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.16.1",
     "connect-cors": "^0.5.6",
     "cors": "^2.8.1",
+    "dateformat": "^2.0.0",
     "express": "^4.14.1",
     "lite-server": "^2.2.2",
     "mongodb": "^2.2.24",
