--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-<<<<<<< HEAD
     "start": "lite-server",
-=======
-    "start": "lite-server & node webapi/webapi.js",
->>>>>>> a1e392a2b86f8e92037fe4dd40733ea58d893ffa
     "webapi": "node webapi/webapi.js",
     "test": "node test.js"
   },
@@ -17,17 +13,15 @@
     "lite-server": "^2.2.2"
   },
   "dependencies": {
-    "cors": "^2.8.1",
-    "connect-cors": "^0.5.6",
     "assert": "^1.4.1",
     "body-parser": "^1.16.1",
+    "connect-cors": "^0.5.6",
+    "cors": "^2.8.1",
+    "dateformat": "^2.0.0",
     "express": "^4.14.1",
     "lite-server": "^2.2.2",
     "mongodb": "^2.2.24",
-<<<<<<< HEAD
-    "sendmail": "^1.1.1"
-=======
-    "sendmail": "^1.1.1"    
->>>>>>> a1e392a2b86f8e92037fe4dd40733ea58d893ffa
+    "sendmail": "^1.1.1",
+    "twilio": "^3.0.0-rc.13"
   }
 }
